--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,12 +1,16 @@
 # This workflows will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Python Package
+name: Pypi
 
 on:
-  release:
-    types: [created]
-
+  pull_request:
+    branches: 
+      - master
+  push:
+    branches: 
+      - master
+  
 jobs:
   deploy:
 
