--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,12 +4,8 @@
 name: Pypi
 
 on:
-  pull_request:
-    branches: 
-      - master
-  push:
-    branches: 
-      - master
+  release:
+    types: [released]
   
 jobs:
   deploy:
