--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+sunnyside/main.py
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,4 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-package/main.py
+
